--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
-$body-color: blue;
-
-body {
-  color: $body-color;
-}
+    html, body, #map {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+    }
